ISSUE-759 update SaaSUserSubscriptionHandler to use DomainSettingsResolver